--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+@import "src/grid/grid";
+.ms-gridItem {
+  border: 1px solid #EEE;
+  display: block;
+  box-sizing: border-box;
+  overflow: hidden;
+}
